--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.DS_Store
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -123,6 +124,8 @@ celerybeat.pid
 
 # Environments
 .env
+.myenv
+myenv/
 .venv
 env/
 venv/
